--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -1,38 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset='utf-8'>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <title>TestNG Report</title>
-<style type="text/css">
-table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}
-td,th {border:1px solid #009;padding:.25em .5em}
-.result th {vertical-align:bottom}
-.param th {padding-left:1em;padding-right:1em}
-.param td {padding-left:.5em;padding-right:2em}
-.stripe td,.stripe th {background-color: #E6EBF9}
-.numi,.numi_attn {text-align:right}
-.total td {font-weight:bold}
-.passedodd td {background-color: #0A0}
-.passedeven td {background-color: #3F3}
-.skippedodd td {background-color: #CCC}
-.skippedodd td {background-color: #DDD}
-.failedodd td,.numi_attn {background-color: #F33}
-.failedeven td,.stripe .numi_attn {background-color: #D00}
-.stacktrace {white-space:pre;font-family:monospace}
-.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}
-</style>
+<style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}.invisible {display:none}</style>
 </head>
 <body>
-<table cellspacing="0" cellpadding="0" class="testOverview">
-<tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">ramp</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">1.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<table>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th colspan="7">Suite1</th></tr>
+<tr><td><a href="#t0">Regression1</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">18,411</td><td></td><td></td></tr>
 </table>
-<table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
-<tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr id="t1"><th colspan="5">ramp &#8212; passed</th></tr>
-<tr class="passedodd"><td>com.oracle.qa.ExtentReportDemo</td><td><a href="#m1"><b>testreport</b>  </a></td><td class="numi">1</td><td>1564551796758</td><td class="numi">1278</td></tr>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Regression1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.oracle.qa.testetsngflow</td><td><a href="#m0">testAutocomplete</a></td><td rowspan="1">1564579543918</td><td rowspan="1">1912</td></tr><tr class="passedeven"><td><a href="#m1">testForm</a></td><td rowspan="4">1564579541472</td><td rowspan="4">2442</td></tr><tr class="passedeven"><td><a href="#m2">testForm</a></td></tr><tr class="passedeven"><td><a href="#m3">testForm</a></td></tr><tr class="passedeven"><td><a href="#m4">testForm</a></td></tr></tbody>
 </table>
-<h1>ramp</h1>
-<h2 id="m1">com.oracle.qa.ExtentReportDemo:testreport</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-</body></html>
+<h2>Regression1</h2><h3 id="m0">com.oracle.qa.testetsngflow#testAutocomplete</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>https://formy-project.herokuapp.com/autocomplete</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.oracle.qa.testetsngflow#testForm</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Aarav</td><td>Poddar</td><td>student</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.oracle.qa.testetsngflow#testForm</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Arpita</td><td>Agarwal</td><td>QA</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.oracle.qa.testetsngflow#testForm</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Bikram</td><td>Vikash</td><td>Mgr</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.oracle.qa.testetsngflow#testForm</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Darsh</td><td>Poddar</td><td>student</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+</body>
+</html>
