--- a/test-output/index.html
+++ b/test-output/index.html
@@ -37,8 +37,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Default_Suite" class="navigator-link">
-              <span class="suite-name border-passed">Default Suite</span>
+            <a href="#" panel-name="suite-Suite1" class="navigator-link">
+              <span class="suite-name border-passed">Suite1</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Default_Suite" class="navigator-link ">
-                    <span>temp-testng-customsuite.xml</span>
+                  <a href="#" panel-name="test-xml-Suite1" class="navigator-link ">
+                    <span>testNG.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Default_Suite" class="navigator-link ">
+                  <a href="#" panel-name="testlist-Suite1" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Default_Suite" class="navigator-link ">
+                  <a href="#" panel-name="group-Suite1" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Default_Suite" class="navigator-link ">
+                  <a href="#" panel-name="times-Suite1" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Default_Suite" class="navigator-link ">
+                  <a href="#" panel-name="reporter-Suite1" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Default_Suite" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-Suite1" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Default_Suite" class="navigator-link ">
+                  <a href="#" panel-name="chronological-Suite1" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -91,21 +91,41 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_Suite" class="hide-methods passed suite-Default_Suite"> (hide)</a> <!-- hide-methods passed suite-Default_Suite -->
-                      <a href="#" panel-name="suite-Default_Suite" class="show-methods passed suite-Default_Suite"> (show)</a> <!-- show-methods passed suite-Default_Suite -->
+                      <a href="#" panel-name="suite-Suite1" class="hide-methods passed suite-Suite1"> (hide)</a> <!-- hide-methods passed suite-Suite1 -->
+                      <a href="#" panel-name="suite-Suite1" class="show-methods passed suite-Suite1"> (show)</a> <!-- show-methods passed suite-Suite1 -->
                     </span>
-                    <div class="method-list-content passed suite-Default_Suite">
+                    <div class="method-list-content passed suite-Suite1">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_Suite" title="com.oracle.qa.ExtentReportDemo" class="method navigator-link" hash-for-method="testreport">testreport</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite1" title="com.oracle.qa.testetsngflow" class="method navigator-link" hash-for-method="testAutocomplete(https://formy-project.herokuapp.com/autocomplete)">testAutocomplete(https://formy-project.herokuapp.com/autocomplete)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Default_Suite -->
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="com.oracle.qa.testetsngflow" class="method navigator-link" hash-for-method="testForm(Aarav, Poddar, student)">testForm(Aarav, Poddar, student)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="com.oracle.qa.testetsngflow" class="method navigator-link" hash-for-method="testForm(Arpita, Agarwal, QA)">testForm(Arpita, Agarwal, QA)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="com.oracle.qa.testetsngflow" class="method navigator-link" hash-for-method="testForm(Bikram, Vikash, Mgr)">testForm(Bikram, Vikash, Mgr)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="com.oracle.qa.testetsngflow" class="method navigator-link" hash-for-method="testForm(Darsh, Poddar, student)">testForm(Darsh, Poddar, student)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Suite1 -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,114 +136,189 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Default_Suite" class="panel Default_Suite">
-          <div class="suite-Default_Suite-class-passed">
+        <div panel-name="suite-Suite1" class="panel Suite1">
+          <div class="suite-Suite1-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.oracle.qa.ExtentReportDemo</span>
+              <span class="class-name">com.oracle.qa.testetsngflow</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testreport">
-                  </a> <!-- testreport -->
-                  <span class="method-name">testreport</span>
+                  <a name="testAutocomplete(https://formy-project.herokuapp.com/autocomplete)">
+                  </a> <!-- testAutocomplete(https://formy-project.herokuapp.com/autocomplete) -->
+                  <span class="method-name">testAutocomplete</span>
+                  <span class="parameters">(https://formy-project.herokuapp.com/autocomplete)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testForm(Aarav, Poddar, student)">
+                  </a> <!-- testForm(Aarav, Poddar, student) -->
+                  <span class="method-name">testForm</span>
+                  <span class="parameters">(Aarav, Poddar, student)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testForm(Arpita, Agarwal, QA)">
+                  </a> <!-- testForm(Arpita, Agarwal, QA) -->
+                  <span class="method-name">testForm</span>
+                  <span class="parameters">(Arpita, Agarwal, QA)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testForm(Bikram, Vikash, Mgr)">
+                  </a> <!-- testForm(Bikram, Vikash, Mgr) -->
+                  <span class="method-name">testForm</span>
+                  <span class="parameters">(Bikram, Vikash, Mgr)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testForm(Darsh, Poddar, student)">
+                  </a> <!-- testForm(Darsh, Poddar, student) -->
+                  <span class="method-name">testForm</span>
+                  <span class="parameters">(Darsh, Poddar, student)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_Suite-class-passed -->
-        </div> <!-- panel Default_Suite -->
-        <div panel-name="test-xml-Default_Suite" class="panel">
+          </div> <!-- suite-Suite1-class-passed -->
+        </div> <!-- panel Suite1 -->
+        <div panel-name="test-xml-Suite1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/Users/loaner/Library/Caches/IdeaIC2019.2/temp-testng-customsuite.xml</span>
+            <span class="header-content">/Users/loaner/Applications/myProject/LearnSelenium/src/main/TestNG/testNG.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Default Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;ramp&quot;&gt;
+&lt;suite name=&quot;Suite1&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Regression1&quot;&gt;
+    &lt;parameter name=&quot;browserloc&quot; value=&quot;/Users/loaner/Downloads/chromedriver&quot;/&gt;
+    &lt;parameter name=&quot;url&quot; value=&quot;https://formy-project.herokuapp.com/autocomplete&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.oracle.qa.ExtentReportDemo&quot;/&gt;
+      &lt;class name=&quot;com.oracle.qa.testetsngflow&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- ramp --&gt;
-&lt;/suite&gt; &lt;!-- Default Suite --&gt;
+  &lt;/test&gt; &lt;!-- Regression1 --&gt;
+&lt;/suite&gt; &lt;!-- Suite1 --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Default_Suite" class="panel">
+        <div panel-name="testlist-Suite1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Default Suite</span>
+            <span class="header-content">Tests for Suite1</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">ramp (1 class)</span>
+                <span class="test-name">Regression1 (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Default_Suite" class="panel">
+        <div panel-name="group-Suite1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Default Suite</span>
+            <span class="header-content">Groups for Suite1</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Default_Suite" class="panel">
+        <div panel-name="times-Suite1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Default Suite</span>
+            <span class="header-content">Times for Suite1</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Default_Suite');
-function tableData_Default_Suite() {
+suiteTableInitFunctions.push('tableData_Suite1');
+function tableData_Suite1() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testreport')
-data.setCell(0, 2, 'com.oracle.qa.ExtentReportDemo')
-data.setCell(0, 3, 1278);
-window.suiteTableData['Default_Suite']= { tableData: data, tableDiv: 'times-div-Default_Suite'}
+data.setCell(0, 1, 'testForm')
+data.setCell(0, 2, 'com.oracle.qa.testetsngflow')
+data.setCell(0, 3, 4401);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testForm')
+data.setCell(1, 2, 'com.oracle.qa.testetsngflow')
+data.setCell(1, 3, 2514);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testForm')
+data.setCell(2, 2, 'com.oracle.qa.testetsngflow')
+data.setCell(2, 3, 2442);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testForm')
+data.setCell(3, 2, 'com.oracle.qa.testetsngflow')
+data.setCell(3, 3, 2348);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'testAutocomplete')
+data.setCell(4, 2, 'com.oracle.qa.testetsngflow')
+data.setCell(4, 3, 1912);
+window.suiteTableData['Suite1']= { tableData: data, tableDiv: 'times-div-Suite1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
-              <div id="times-div-Default_Suite">
-              </div> <!-- times-div-Default_Suite -->
+              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <div id="times-div-Suite1">
+              </div> <!-- times-div-Suite1 -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Default_Suite" class="panel">
+        <div panel-name="reporter-Suite1" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Default Suite</span>
+            <span class="header-content">Reporter output for Suite1</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Default_Suite" class="panel">
+        <div panel-name="ignored-methods-Suite1" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Default_Suite" class="panel">
+        <div panel-name="chronological-Suite1" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.oracle.qa.ExtentReportDemo</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">testreport</span>
+              <div class="chronological-class-name">com.oracle.qa.testetsngflow</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">invoke_browser(/Users/loaner/Downloads/chromedriver)</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="test-method">
+                <span class="method-name">testForm(Arpita, Agarwal, QA)</span>
+                <span class="method-start">4601 ms</span>
               </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testForm(Bikram, Vikash, Mgr)</span>
+                <span class="method-start">9003 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testForm(Darsh, Poddar, student)</span>
+                <span class="method-start">11351 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testForm(Aarav, Poddar, student)</span>
+                <span class="method-start">13866 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testAutocomplete(https://formy-project.herokuapp.com/autocomplete)</span>
+                <span class="method-start">16312 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">quit_browser</span>
+                <span class="method-start">18224 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
