--- a/test-output/old/Suite1/methods.html
+++ b/test-output/old/Suite1/methods.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67e66c">  <td>19/07/30 22:04:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;testetsngflow.invoke_browser()[pri:0, instance:com.oracle.qa.testetsngflow@8dbdac1]">&gt;&gt;invoke_browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@572868060</td>   <td></td> </tr>
-<tr bgcolor="67e66c">  <td>19/07/30 22:04:19</td>   <td>3096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testetsngflow.testForm()[pri:1, instance:com.oracle.qa.testetsngflow@8dbdac1]">testForm</td> 
-  <td>main@572868060</td>   <td></td> </tr>
-<tr bgcolor="67e66c">  <td>19/07/30 22:04:24</td>   <td>8231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testetsngflow.testAutocomplete()[pri:2, instance:com.oracle.qa.testetsngflow@8dbdac1]">testAutocomplete</td> 
-  <td>main@572868060</td>   <td></td> </tr>
-<tr bgcolor="67e66c">  <td>19/07/30 22:04:26</td>   <td>9822</td> <td>&nbsp;</td><td title="&lt;&lt;testetsngflow.quit_browser()[pri:0, instance:com.oracle.qa.testetsngflow@8dbdac1]">&lt;&lt;quit_browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@572868060</td>   <td></td> </tr>
+<tr bgcolor="ef8d72">  <td>19/07/31 18:55:27</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;testetsngflow.invoke_browser(java.lang.String)[pri:0, instance:com.oracle.qa.testetsngflow@52bf72b5]">&gt;&gt;invoke_browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2012993836</td>   <td></td> </tr>
+<tr bgcolor="ef8d72">  <td>19/07/31 18:55:32</td>   <td>4579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testetsngflow.testForm(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.oracle.qa.testetsngflow@52bf72b5]">testForm</td> 
+  <td>main@2012993836</td>   <td></td> </tr>
+<tr bgcolor="ef8d72">  <td>19/07/31 18:55:36</td>   <td>8981</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testetsngflow.testForm(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.oracle.qa.testetsngflow@52bf72b5]">testForm</td> 
+  <td>main@2012993836</td>   <td></td> </tr>
+<tr bgcolor="ef8d72">  <td>19/07/31 18:55:38</td>   <td>11329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testetsngflow.testForm(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.oracle.qa.testetsngflow@52bf72b5]">testForm</td> 
+  <td>main@2012993836</td>   <td></td> </tr>
+<tr bgcolor="ef8d72">  <td>19/07/31 18:55:41</td>   <td>13844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testetsngflow.testForm(java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.oracle.qa.testetsngflow@52bf72b5]">testForm</td> 
+  <td>main@2012993836</td>   <td></td> </tr>
+<tr bgcolor="ef8d72">  <td>19/07/31 18:55:43</td>   <td>16290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testetsngflow.testAutocomplete(java.lang.String)[pri:2, instance:com.oracle.qa.testetsngflow@52bf72b5]">testAutocomplete</td> 
+  <td>main@2012993836</td>   <td></td> </tr>
+<tr bgcolor="ef8d72">  <td>19/07/31 18:55:45</td>   <td>18202</td> <td>&nbsp;</td><td title="&lt;&lt;testetsngflow.quit_browser()[pri:0, instance:com.oracle.qa.testetsngflow@52bf72b5]">&lt;&lt;quit_browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2012993836</td>   <td></td> </tr>
 </table>
